use MarkDown for model headings

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -36,11 +36,10 @@
    ]
   },
   {
-   "cell_type": "heading",
+   "cell_type": "markdown",
    "metadata": {},
-   "level": 3,
    "source": [
-    "VGG16"
+    "## VGG16"
    ]
   },
   {
@@ -65,11 +64,10 @@
    ]
   },
   {
-   "cell_type": "heading",
+   "cell_type": "markdown",
    "metadata": {},
-   "level": 3,
    "source": [
-    "Squeezenet"
+    "## Squeezenet"
    ]
   },
   {
@@ -95,11 +93,10 @@
    ]
   },
   {
-   "cell_type": "heading",
+   "cell_type": "markdown",
    "metadata": {},
-   "level": 3,
    "source": [
-    "DenseNet"
+    "## DenseNet"
    ]
   },
   {
@@ -124,11 +121,10 @@
    ]
   },
   {
-   "cell_type": "heading",
+   "cell_type": "markdown",
    "metadata": {},
-   "level": 3,
    "source": [
-    "MobileNet"
+    "## MobileNet"
    ]
   },
   {
@@ -153,11 +149,10 @@
    ]
   },
   {
-   "cell_type": "heading",
+   "cell_type": "markdown",
    "metadata": {},
-   "level": 3,
    "source": [
-    "MarrNet"
+    "## MarrNet"
    ]
   },
   {
