notebook check updates + stats
1. Updated stats script (cohens d, degrees of freedom)
2. Added notebooks with sections for sanity checking / visualizing content of functions used (for both runLangAnalysis and runLangSpec scripts)
3. Added runLayerPrefAnalysis (default: all networks - addition to the lang layer pref analysis script)
4. Added quick script for finding network sizes

--- a/neural_nlp/analyze/layer_preferences/runLayerPrefAnalysisLang.ipynb
+++ b/neural_nlp/analyze/layer_preferences/runLayerPrefAnalysisLang.ipynb
@@ -55,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check how the analysis was generated  based on code below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -121,6 +128,20 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def meanSplitExp(score):\n",
+    "#     x = score.raw.raw.raw\n",
+    "#     x1 = x.mean(['split', 'experiment'])\n",
+    "#     return x1\n",
+    "\n",
+    "# The not ceiled value was used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -129,7 +150,7 @@
        "array(0.609132)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +191,7 @@
        "  - atlas            (neuroid) object 'language' 'language' ... 'language'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,6 +234,21 @@
    "source": [
     "p2=getLayerPref(p1a)\n",
     "p2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def getLayerPref(obj):\n",
+    "#     x = obj.argmax('layer', skipna=True) # Argmax over layer dimension\n",
+    "#     # Normalize scores \n",
+    "#     x_norm = x/x.max()\n",
+    "#     return x_norm\n",
+    "\n",
+    "# Takes the argmax score over layers and normalizes."
    ]
   },
   {
@@ -397,6 +433,13 @@
    ],
    "source": [
     "p3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Below sections are if the layer prefs should be plotted on the brain. Not included in the first submission of paper."
    ]
   },
   {
