--- a/neural_nlp/analyze/layer_preferences/plotElectrodeLayerPrefFedorenko.ipynb
+++ b/neural_nlp/analyze/layer_preferences/plotElectrodeLayerPrefFedorenko.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "    benchmark:    Fedorenko2016v3-encoding"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "  - subject_UID  (neuroid) int64 1 1 1 1 1 1 1 1 1 1 1 ... 1 1 1 1 1 1 1 1 1 1 1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "  - subject_UID  (neuroid) int64 1 1 1 1 1 1 1 1 1 1 1 ... 1 1 1 1 1 1 1 1 1 1 1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "    ceiling:  <xarray.Score (aggregation: 3, neuroid: 97)>\\narray([[0.276986,..."
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "  * layer    (layer) object 'drop' 'encoder.h.0' ... 'encoder.h.47'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b21dee54fd0>"
+       "<matplotlib.collections.PathCollection at 0x2acb0c12f5f8>"
       ]
      },
      "execution_count": 16,
@@ -577,7 +577,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b21df3337b8>"
+       "<matplotlib.collections.PathCollection at 0x2acb0c605eb8>"
       ]
      },
      "execution_count": 17,
@@ -610,7 +610,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b21df395470>"
+       "<matplotlib.collections.PathCollection at 0x2acb0c662c18>"
       ]
      },
      "execution_count": 18,
@@ -643,7 +643,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b21df9f5198>"
+       "<matplotlib.collections.PathCollection at 0x2acb0ccc39e8>"
       ]
      },
      "execution_count": 19,
@@ -677,16 +677,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b21dfd859b0>"
+       "<matplotlib.collections.PathCollection at 0x2acb0cd13ba8>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -711,16 +711,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2b21dfddc438>]"
+       "[<matplotlib.lines.Line2D at 0x2acb0cd6d6d8>]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -751,16 +751,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b21dcdf0f98>"
+       "<matplotlib.collections.PathCollection at 0x2acb0cdca5f8>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "(0, 10)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "0.3549620334842349"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
        "    aggregation  <U10 'center'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,16 +872,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b21dfdfd1d0>"
+       "<matplotlib.collections.PathCollection at 0x2acb0ce65ba8>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
        "  - neuroid_id   (neuroid) int64 0 1 2 3 4 5 6 7 8 ... 22 23 24 25 26 27 28 29"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,16 +940,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b21dfe3add8>"
+       "<matplotlib.collections.PathCollection at 0x2acb0ced4f98>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
        "    endpoint_x:           <xarray.DataAssembly (neuroid: 97)>\\narray([ 20.,  ..."
       ]
      },
-     "execution_count": 84,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,9 +1012,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/om/user/gretatu/.conda/envs/brainmodeling/lib/python3.6/site-packages/xarray/core/groupby.py:639: FutureWarning: Default reduction dimension will be changed to the grouped dimension in a future version of xarray. To silence this warning, pass dim=xarray.ALL_DIMS explicitly.\n",
+      "  skipna=skipna, allow_lazy=True, **kwargs)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1024,7 +1032,7 @@
        "  * subject_UID  (subject_UID) int64 1 2 3 4 5"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1078,7 @@
        "  - subject_UID  (neuroid) int64 1 1 1 1 1 1 1 1 1 1 1 ... 1 1 1 1 1 1 1 1 1 1 1"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1128,7 @@
        "  - subject_UID  (neuroid) int64 1 1 1 1 1 1 1 1 1 1 1 ... 1 1 1 1 1 1 1 1 1 1 1"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1164,7 @@
        "    ceiling:  <xarray.Score (aggregation: 3, neuroid: 97)>\\narray([[0.276986,..."
       ]
      },
-     "execution_count": 56,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1214,7 @@
        "  - subject_UID  (neuroid) int64 1 1 1 1 1 1 1 1 1 1 1 ... 1 1 1 1 1 1 1 1 1 1 1"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1282,7 @@
        "    ceiling:  <xarray.Score (aggregation: 3, neuroid: 97)>\\narray([[0.276986,..."
       ]
      },
-     "execution_count": 64,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1304,7 @@
        "array(2.428731e+08)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1327,7 @@
        "  * subject_UID  (subject_UID) int64 1 2 3 4 5"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1348,7 @@
        "array(0.824058)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1433,7 @@
        "    ceiling:  <xarray.Score (aggregation: 3, neuroid: 97)>\\narray([[0.276986,..."
       ]
      },
-     "execution_count": 71,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1455,7 @@
        "array(0.541013)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1476,7 @@
        "array(12)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1496,7 @@
        "0.25"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,11 +1507,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sio.savemat('Fedorenko2016_LayerPref_per_electrode_08122020.mat',{'layerpref':x_norm.values,'subjectID':x_norm.subject_UID})"
+    "sio.savemat('Fedorenko2016_LayerPref_per_electrode_08132020.mat',{'layerpref_normalized':x_norm.values,\n",
+    "                                                                  'layerpref_raw_argmax':x.values,\n",
+    "                                                                  'subjectID':x_norm.subject_UID.values,\n",
+    "                                                                 'layers':score.raw.layer.values,\n",
+    "                                                                 'raw_r_layer_by_neuroid_nice_matrix':score.raw.raw})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5,\n",
+       "       5, 5, 5, 5, 5, 5, 5, 5, 5])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_norm.subject_UID.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 21, 17, 17, 12, 18, 21, 23, 16, 18, 18, 37, 21, 18, 17, 18, 18,\n",
+       "       16, 39, 36, 37,  5, 19, 18, 18, 18, 18, 37, 18, 21, 30, 19, 25, 48,\n",
+       "       36, 41, 18, 18, 18, 39, 34, 21, 21, 42, 11, 24, 40,  5, 28, 45, 16,\n",
+       "       23, 18, 31, 21, 19, 18, 17, 14, 21, 17, 17, 18, 23, 41,  9, 16, 17,\n",
+       "       17, 18, 17, 15,  5, 16, 18, 18, 23, 18, 34, 24,  7, 18, 19, 15, 40,\n",
+       "       18, 38, 27, 28,  1, 36, 44, 16, 41, 16, 34, 17])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['drop', 'encoder.h.0', 'encoder.h.1', 'encoder.h.2', 'encoder.h.3',\n",
+       "       'encoder.h.4', 'encoder.h.5', 'encoder.h.6', 'encoder.h.7',\n",
+       "       'encoder.h.8', 'encoder.h.9', 'encoder.h.10', 'encoder.h.11',\n",
+       "       'encoder.h.12', 'encoder.h.13', 'encoder.h.14', 'encoder.h.15',\n",
+       "       'encoder.h.16', 'encoder.h.17', 'encoder.h.18', 'encoder.h.19',\n",
+       "       'encoder.h.20', 'encoder.h.21', 'encoder.h.22', 'encoder.h.23',\n",
+       "       'encoder.h.24', 'encoder.h.25', 'encoder.h.26', 'encoder.h.27',\n",
+       "       'encoder.h.28', 'encoder.h.29', 'encoder.h.30', 'encoder.h.31',\n",
+       "       'encoder.h.32', 'encoder.h.33', 'encoder.h.34', 'encoder.h.35',\n",
+       "       'encoder.h.36', 'encoder.h.37', 'encoder.h.38', 'encoder.h.39',\n",
+       "       'encoder.h.40', 'encoder.h.41', 'encoder.h.42', 'encoder.h.43',\n",
+       "       'encoder.h.44', 'encoder.h.45', 'encoder.h.46', 'encoder.h.47'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score.raw.layer.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Score (layer: 49, neuroid: 97)>\n",
+       "array([[ 0.043641,  0.041515,  0.01823 , ...,  0.091021, -0.009139,  0.062257],\n",
+       "       [ 0.084247, -0.059918,  0.062459, ...,  0.022362,  0.029762,  0.125159],\n",
+       "       [ 0.003673, -0.007264, -0.047463, ..., -0.076798, -0.043478, -0.032415],\n",
+       "       ...,\n",
+       "       [ 0.004909, -0.013974,  0.137514, ...,  0.01742 , -0.024777,  0.099344],\n",
+       "       [ 0.074548,  0.013734, -0.101609, ...,  0.033858,  0.060414,  0.048678],\n",
+       "       [ 0.068752, -0.046421,  0.091446, ..., -0.019013, -0.094781, -0.092645]])\n",
+       "Coordinates:\n",
+       "  * layer        (layer) object 'drop' 'encoder.h.0' ... 'encoder.h.47'\n",
+       "  * neuroid      (neuroid) MultiIndex\n",
+       "  - electrode    (neuroid) int64 0 1 2 3 4 5 6 7 8 ... 22 23 24 25 26 27 28 29\n",
+       "  - neuroid_id   (neuroid) int64 0 1 2 3 4 5 6 7 8 ... 22 23 24 25 26 27 28 29\n",
+       "  - subject_UID  (neuroid) int64 1 1 1 1 1 1 1 1 1 1 1 ... 1 1 1 1 1 1 1 1 1 1 1\n",
+       "Attributes:\n",
+       "    raw:      <xarray.Score (layer: 49, split: 5, neuroid: 97)>\\narray([[[-0...."
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score.raw.raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Score (layer: 49)>\n",
+       "array([90, 90, 76, 90, 90, 76, 44, 76, 90, 90, 90, 90, 90, 90, 90, 90, 90, 90,\n",
+       "       90, 90, 76, 90, 90, 90, 90, 79, 76, 90, 90, 79, 90, 79, 87, 90, 90, 76,\n",
+       "       90, 79, 79, 90, 90, 90, 90, 90, 79, 90, 79, 90, 76])\n",
+       "Coordinates:\n",
+       "  * layer    (layer) object 'drop' 'encoder.h.0' ... 'encoder.h.47'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score.raw.argmax('neuroid')"
    ]
   },
   {
